--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
           <div class="col-lg-7">
             <div class="about-descr">
               <p class="p-heading">Wie ben ik?</p>
-              <p class="separator">Mijn naam is <b>Ruben Kinnart</b>. Ik ben een derdejaarsstudent die Toegepaste
-                Informatica met keuzetraject AI en Robotics studeert aan de Hogeschool PXL. Zelf ben ik een rustige maar
-                gemotiveerde student die graag bijleert. </p>
+              <p class="separator">Mijn naam is Ruben Kinnart. Ik ben een derdejaarsstudent Toegepaste Informatica met
+                keuzetraject Artificiële intelligentie (AI) & Robotics aan de Hogeschool PXL. Zelf ben ik een rustige
+                maar gemotiveerde student die graag bijleert.</p>
               <p class="p-heading">Interesses</p>
-              <p class="separator">Mijn interesses zijn IT en computer gerelateerd. Ik probeer de laatste nieuwe trends
-                hierin te volgen en vind het zeer leuk om te programmeren en om naar al dan niet wiskundige oplossingen
-                te zoeken, problem solving. Specifiek ben ik geinteresseerd in AI en Robotics. Buiten dit vakgebied vind
-                ik het ook leuk om te gaan fietsen en om films of series te kijken. </p>
+              <p class="separator">Mijn interesses zijn IT en computer gerelateerd. Ik probeer hierin de laatste nieuwe
+                trends te volgen en vind het zeer leuk om te programmeren en om naar al dan niet wiskundige oplossingen
+                te zoeken. Specifiek ben ik geïnteresseerd in AI. Buiten dit vakgebied vind ik het ook leuk om te gaan
+                fietsen en om films of series te kijken.</p>
 
             </div>
 
@@ -115,28 +115,27 @@
             <div class="about-descr">
               <p class="p-heading">Competenties en talenten</p>
               <p class="separator">Hogeschool PXL biedt studenten aan een Thalento-test in te vullen. Na het invullen
-                van een vragenlijst wordt er een attest op basis van je kernkwadranten gevormd. In mijn attest staat dat
+                van een vragenlijst wordt er een attest op basis van je kernkwadranten gevormd. Uit de test blijkt dat
                 ik vooral meewerkend ben, hier ga ik volledig mee akkoord. Hoewel ik minder gericht ben een
-                vooraanstaande rol op te nemen in een team ben ik sterk betrokken bij de activiteiten.</p>
-              <p class="separator">Andere eigenschappen die ik op het rapport terug kon vinden over mezelf zijn ook dat
-                ik een pragmaticus ben, dat ik uitvoerend ben en dat ik extravert ben. Over het algemeen klopt dit
-                attest, al ben ik volgens mezelf meer introvert dan extravert. Ik vind het namelijk leuk om alleen en op
-                mijn eigen tempo aan iets te werken. Ik denk graag na over een probleem waarna mijn uitvoerend karakter
-                het overneemt om acties tot een goed einde te brengen.</p>
-                <img src="assets/img/kernkwadranten.png" class="img-responsive" alt="seminarie blockchain">
-              <p class="separator">Tijdens de opleiding zijn deze kernkwadranten nog gegroeid. De pop-sessies die
-                georganiseerd werden hebben mij geholpen als introvert persoon. Dit zijn sessies om je te helpen bij je
-                persoonlijke ontwikkeling. Ze hebben mij geholpen om meer extravert te worden, om initiatief te nemen en
-                op te treden binnen een groep. Ook lieten ze mij mijn eigen sterktes en zwaktes beter inzien om zelf
-                hieraan te werken.</p>
+                vooraanstaande rol op te nemen in een team, ben ik toch sterk betrokken bij de activiteiten.</p>
+              <p class="separator">Andere eigenschappen die ik uit het rapport kon afleiden zijn dat ik een pragmaticus
+                ben maar ook uitvoerend en extravert ben. Over het algemeen kan ik me terugvinden in de resultaten van
+                dit attest, al ben ik volgens mezelf meer introvert dan extravert. Ik vind het namelijk leuk om alleen
+                en op mijn eigen tempo te werken. Ik denk graag na over een probleem waarna mijn uitvoerend karakter het
+                overneemt om acties tot een goed einde te brengen.</p>
+              <img src="assets/img/kernkwadranten.png" class="img-responsive" alt="seminarie blockchain">
+              <p class="separator">Tijdens de opleiding zijn deze kernkwadranten nog gegroeid. De pop-sessies hebben mij
+                geholpen als introvert persoon. Dit zijn sessies om je persoonlijk te ontwikkeling. Ze hebben mij
+                geholpen om meer extravert te worden, om initiatief te nemen en op te treden binnen een groep. Ook
+                lieten ze mij mijn eigen sterktes en zwaktes beter inzien om zelf hieraan te werken.</p>
 
               <p class="p-heading">Ambities</p>
-              <p class="separator">Ik wil altijd graag blijven bijleren. De technieken in het IT vakgebied blijven
+              <p class="separator">Ik wil altijd graag blijven bijleren. De technieken in dit vakgebied blijven
                 evolueren en veranderen waardoor het leuk en interessant is om deze nieuwe technologieën te ontdekken.
               </p>
-              <p class="separator">Over 5 jaar zie ik mezelf werken als frontend ontwikkelaar of zie ik mezelf
-                applicaties maken met AI-technieken in verwerkt. Ook vind ik robotica leuk en zie ik me later met robots
-                werken.</p>
+              <p class="separator">Over 5 jaar zie ik mezelf werken als front-end ontwikkelaar of zie ik mezelf
+                applicaties maken waarin AI-technieken zijn verwerkt. Ook vind ik robotica leuk en zie ik me later met
+                robots werken.</p>
             </div>
           </div>
         </div>
@@ -222,7 +221,7 @@
                       Ericsson: Op weg naar 5G - Online
                     </h6>
                     <p class="list-group-item-text">
-                      <strong style="color: #b8a07e;">PXL activiteit</strong> - Dit seminarie geeft een introductie tot
+                      <strong style="color: #b8a07e;">PXL activiteit</strong> - Dit seminarie gaf een introductie tot
                       5G, 5G binnen Internet of Things (IoT) en de technologie erachter.
                     </p>
                   </div>
@@ -276,50 +275,68 @@
                   <div class="list-group-item">
                     <span style="float: right;"><span>20/04/2020</span> - <span>26 uur</span></span>
                     <h6 class="list-group-item-heading">
-                      Projectweek 2TIN - <a target="_blank"
-                        href="http://www.pxl.be/">@Hogeschool PXL</a>
+                      Projectweek 2TIN - <a target="_blank" href="http://www.pxl.be/">@Hogeschool PXL</a>
                     </h6>
                     <p class="list-group-item-text">
-                      <strong style="color: #b8a07e;">PXL activiteit</strong> - Een volledige week gericht op het leren werken aan een project. Voornamelijk het werken in groepsverband.
+                      <strong style="color: #b8a07e;">PXL activiteit</strong> - Een volledige week gericht op het leren
+                      werken in een team aan een project.
                     </p>
                   </div>
                   <div class="list-group-item">
                     <span style="float: right;"><span>10 uur</span></span>
                     <h6 class="list-group-item-heading">
-                      POP-sessies - <a target="_blank"
-                        href="http://www.pxl.be/">@Hogeschool PXL</a>
+                      POP-sessies - <a target="_blank" href="http://www.pxl.be/">@Hogeschool PXL</a>
                     </h6>
                     <p class="list-group-item-text">
-                      <div class="list-group-item">
-                        <span style="float: right;"><span>12/02/2020</span></span>
-                        <h6 class="list-group-item-heading">
-                          Feedback: “The key to improvement” - <a target="_blank"
-                            href="http://www.pxl.be/">@Hogeschool PXL</a>
-                        </h6>
-                        <p class="list-group-item-text">
-                          <strong style="color: #b8a07e;">PXL activiteit</strong> - Het geven en ontvangen van kritiek of feedback kan best moeilijk zijn. Tijdens deze sessie werd dit ons aangeleerd en aangetoond hoe belangrijk dit kan zijn.
-                        </p>
-                      </div>
-                      <div class="list-group-item">
-                        <span style="float: right;"><span>06/03/2020</span></span>
-                        <h6 class="list-group-item-heading">
-                          Brein aan het werk. Niet storen! - <a target="_blank"
-                            href="http://www.pxl.be/">@Hogeschool PXL</a>
-                        </h6>
-                        <p class="list-group-item-text">
-                          <strong style="color: #b8a07e;">PXL activiteit</strong> - Een sessie over het behouden van aandacht en concentratie. Er werd aangetoond hoe je best kan focussen op belangrijke activiteiten en hoe deze aandacht behouden kan blijven. Het verbeteren van aandacht leidt tot het verzetten van meer werk op minder tijd. 
-                        </p>
-                      </div>
-                      <div class="list-group-item">
-                        <span style="float: right;"><span>03/03/2020</span></span>
-                        <h6 class="list-group-item-heading">
-                          POPping: Van intentie naar actie - <a target="_blank"
-                            href="http://www.pxl.be/">@Hogeschool PXL</a>
-                        </h6>
-                        <p class="list-group-item-text">
-                          <strong style="color: #b8a07e;">PXL activiteit</strong> - Een sessie over persoonlijkheden. Hier werd gereflecteerd over onze eigen persoonlijkheid en de persoonlijkheid van anderen. Door te reflecteren over de verschillende lagen van je persoonlijkheid kunnen IT’ers hun opleiding en loopbaan waarderend in kaart brengen en achterhalen wat zij wensen voor hun toekomst.
-                        </p>
-                      </div>
+                    <div class="list-group-item">
+                      <span style="float: right;"><span>12/02/2020</span></span>
+                      <h6 class="list-group-item-heading">
+                        Feedback: “The key to improvement” - <a target="_blank" href="http://www.pxl.be/">@Hogeschool
+                          PXL</a>
+                      </h6>
+                      <p class="list-group-item-text">
+                        <strong style="color: #b8a07e;">PXL activiteit</strong> - Het geven en ontvangen van kritiek of
+                        feedback kan best moeilijk zijn. Tijdens deze sessie werd dit ons aangeleerd en aangetoond hoe
+                        belangrijk dit kan zijn en hoe we hier mee moeten omgaan.
+                      </p>
+                    </div>
+                    <div class="list-group-item">
+                      <span style="float: right;"><span>06/03/2020</span></span>
+                      <h6 class="list-group-item-heading">
+                        Brein aan het werk. Niet storen! - <a target="_blank" href="http://www.pxl.be/">@Hogeschool
+                          PXL</a>
+                      </h6>
+                      <p class="list-group-item-text">
+                        <strong style="color: #b8a07e;">PXL activiteit</strong> - Een sessie over het behouden van
+                        aandacht en concentratie. Er werd aangetoond hoe je best kan focussen op belangrijke
+                        activiteiten en hoe deze aandacht behouden kan blijven. Het verbeteren van aandacht leidt tot
+                        het verzetten van meer werk op minder tijd.
+                      </p>
+                    </div>
+                    <div class="list-group-item">
+                      <span style="float: right;"><span>03/03/2020</span></span>
+                      <h6 class="list-group-item-heading">
+                        POPping: Van intentie naar actie - <a target="_blank" href="http://www.pxl.be/">@Hogeschool
+                          PXL</a>
+                      </h6>
+                      <p class="list-group-item-text">
+                        <strong style="color: #b8a07e;">PXL activiteit</strong> - Een sessie over persoonlijkheden. Hier
+                        werd gereflecteerd over onze eigen persoonlijkheid en de persoonlijkheid van anderen. Door te
+                        reflecteren over de verschillende lagen van je persoonlijkheid kunnen IT’ers hun opleiding en
+                        loopbaan waarderend in kaart brengen en achterhalen wat zij wensen voor hun toekomst.
+                      </p>
+                    </div>
+                    </p>
+                  </div>
+                  <div class="list-group-item">
+                    <span style="float: right;"><span>24/04/2021</span> - <span>20 uur</span></span>
+                    <h6 class="list-group-item-heading">
+                      Portfolio
+                    </h6>
+                    <p class="list-group-item-text">
+                      <strong style="color: #b8a07e;">PXL activiteit</strong> - Het maken van een portfolio op een leuke
+                      manier, namelijk in de vorm van een website. Het is een weergave van wat ik allemaal gedaan heb de
+                      afgelopen dagen en wat ik hier uit heb geleerd.
                     </p>
                   </div>
                 </div>
@@ -341,9 +358,12 @@
                       Pluralsight courses - Online
                     </h6>
                     <p class="list-group-item-text">
-                      <strong style="color: #b8a07e;">Eigen activiteit</strong> - Bijleren van ongeziene onderwerpen tijdens de lessen aan de hand van Pluralsight courses. Pluralsight is een educatief platform dat voor studenten wordt aangeboden door Hogeschool PXL. 
+                      <strong style="color: #b8a07e;">Eigen activiteit</strong> - Bijleren van ongeziene onderwerpen
+                      tijdens de lessen aan de hand van Pluralsight courses. Pluralsight is een educatief platform dat
+                      voor studenten wordt aangeboden door Hogeschool PXL.
                     </p>
-                    <img src="assets/img/pluralsight.png" class="img-responsive" alt="img_pluralsight" style="width: 100%;">
+                    <img src="assets/img/pluralsight.png" class="img-responsive" alt="img_pluralsight"
+                      style="width: 100%;">
                   </div>
                 </div>
               </div>
@@ -370,7 +390,8 @@
             <div class="col-lg-6 col-md-6">
               <div class="selection-info">
 
-                <a href="activity1.html"><img src="assets/img/activity1/activity1_00.png" class="img-responsive" alt="img"></a>
+                <a href="activity1.html"><img src="assets/img/activity1/activity1_00.png" class="img-responsive"
+                    alt="img"></a>
 
                 <div class="selection-txt">
 
@@ -386,12 +407,13 @@
             <div class="col-lg-6 col-md-6">
               <div class="selection-info">
 
-                <a href="activity2.html"><img src="assets/img/activity2/activity2_00.jpg" class="img-responsive" alt="img"></a>
+                <a href="activity2.html"><img src="assets/img/activity2/activity2_00.jpg" class="img-responsive"
+                    alt="img"></a>
 
                 <div class="selection-txt">
 
-                  <h4><a href="activity2.html">Activity 2</a></h4>
-                  <p class="separator">Go to activity 2
+                  <h4><a href="activity2.html">Innovatieroute: low-code</a></h4>
+                  <p class="separator">Ga naar activiteit 2
                   </p>
 
                 </div>
@@ -403,12 +425,13 @@
             <div class="col-lg-6 col-md-6">
               <div class="selection-info">
 
-                <a href="activity3.html"><img src="assets/img/activity3/activity3_00.png" class="img-responsive" alt="img"></a>
+                <a href="activity3.html"><img src="assets/img/activity3/activity3_00.png" class="img-responsive"
+                    alt="img"></a>
 
                 <div class="selection-txt">
 
-                  <h4><a href="activity3.html">Activity 3</a></h4>
-                  <p class="separator">Go to activity 3
+                  <h4><a href="activity3.html">Seminarie: basis agile workshop</a></h4>
+                  <p class="separator">Ga naar activiteit 3
                   </p>
 
                 </div>
@@ -419,16 +442,13 @@
             <div class="col-lg-6 col-md-6">
               <div class="selection-info">
 
-                <a href="activity4.html"><img src="assets/img/activity4/activity4_00.png" class="img-responsive" alt="img"></a>
-
+                <a href="activity4.html"><img src="assets/img/activity4/activity4_00.png" class="img-responsive"
+                    alt="img"></a>
                 <div class="selection-txt">
-
-                  <h4><a href="activity4.html">Activity 4</a></h4>
-                  <p class="separator">Go to activity 4
+                  <h4><a href="activity4.html">Seminarie: blockchain</a></h4>
+                  <p class="separator">Ga naar activiteit 4
                   </p>
-
                 </div>
-
               </div>
             </div>
           </div>
